syntax = "proto3";


message MapSubMsg {
    int32 id = 1;
    string text = 2;
}

message MapMessage {
    map<string, string> str_str = 1;
    map<int32, string> int_str = 2;
    map<string, MapSubMsg> str_msg = 3;
}
